Add button component

--- a/map/app/templates/index.hbs
+++ b/map/app/templates/index.hbs
@@ -1,5 +1,11 @@
 {{outlet}}
-{{model}}
-{{#each model as |building|}}
-    {{building.buildingCode}}
+{{!model--}}
+<div class="btn-group btn-group-justified" role="group" aria-label="...">
+  
+{{#each model as |building index|}}
+  <button type="button" class="btn btn-default"> {{building}}</button>
+   
+   
+
 {{/each}}
+</div>
