Add save and get for my books

--- a/ember/app/templates/application.hbs
+++ b/ember/app/templates/application.hbs
@@ -9,6 +9,11 @@
           </button>
           <a class="navbar-brand" href="/">USC Book Search</a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+ -          <ul class="nav navbar-nav navbar-right">
+ -            <li>{{#link-to 'books.get' }}My Books{{/link-to}}</li>
+ -          </ul>
+ -        </div>
       </div>
     </nav>
     <div class="container-fluid">
