--- a/ember/app/styles/app.css
+++ b/ember/app/styles/app.css
@@ -104,3 +104,17 @@ body {
   border-radius: 50%;
 }
 
+.navbar-inverse .navbar-brand{
+    color:white;
+    font-size:30px;
+}
+
+.navbar-inverse .navbar-brand:hover{
+    color:white;
+    
+}
+
+.navbar-inverse{
+  background-image:none;
+  background-color:#990000 !important;
+}
